--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.8.2"
   }
 }
