--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Server for Vegetation Station iOS app",
   "main": "index.js",
   "scripts": {
+    "initialize": "node scripts/initializeDB.js",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,7 +23,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "eslint": "^8.21.0",
