--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/Blue-Ocean-DBZ/VS_Server#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "path": "^0.12.7",
     "pg": "^8.7.3"
