--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Server for Vegetation Station iOS app",
   "main": "index.js",
   "scripts": {
+    "initialize": "node scripts/initializeDB.js",
+
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,11 +20,13 @@
   },
   "homepage": "https://github.com/Blue-Ocean-DBZ/VS_Server#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.7.3"
+
   },
   "devDependencies": {
     "eslint": "^8.21.0",
